<resources>
    <string name="app_name">LiveCook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">الاعددات </string>
    <string name="menu_home">الرئيسية</string>
    <string name="menu_search_cook">البحث عن طباخين</string>
    <string name="menu_search_resturant">البحث عن مطاعم</string>
    <string name="menu_favaoirite">المفضلة </string>
    <string name="menu_police">سياسة الاستخدام</string>
    <string name="menu_about">عن التطبيق</string>
    <string name="menu_accountseeting">اعدادات الحساب</string>
    <string name="menu_contact">تواصل معنا </string>
    <string name="menu_exist">تسجيل الخروج</string>
    <string name="notfiy">تشغيل الاشعارات </string>
    <string name="register">تسجيل</string>
    <string name="serachhinit">البحث</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">الكل</string>
    <string name="tab_text_2">طباخين</string>
    <string name="tab_text_3">مطاعم</string>
    <string name="spinner_title">+999</string>
    <string name="mobile_number">رقم الجوال</string>
    <string name="message">رسالتك</string>
    <string name="write_hinit">قم بالضغط هنا لكتابة رسالتك</string>
    <string name="sendbutton">ارسال</string>
    <string name="namee">الاسم</string>
    <string name="country">الدولة</string>
    <string name="passwaed">كلمة المرور</string>
    <string name="desc">الوصف</string>
    <string name="savee">حفظ</string>
    <string name="المدينة">City</string>
    <string name="cityname">المدينة</string>
    <string name="state">الحي </string>
    <string name="privacy_text">هذا نص تجريبي لسياسية الاستخدام لاختبار شكل و حجم النصوص و طريقة عرضهاi في هذا المكان و حجم و لون الخط حيث يتم التحكم في هذا النص وامكانية تغييرة في اي وقت عن طريق ادارة الموقع . يتم اضافة هذا النص كنص تجريبي للمعاينة فقط وهو لا يعبر عن أي موضوع محدد انما لتحديد الشكل العام للقسم او الصفحة أو الموقع.  هذا نص تجريبي لاختبار شكل و حجم النصوص و طريقة عرضهاi في هذا المكان و حجم و لون الخط حيث يتم التحكم في هذا النص وامكانية تغييرة في اي وقت عن طريق ادارة الموقع . يتم اضافة هذا النص كنص تجريبي للمعاينة فقط وهو لا يعبر عن أي موضوع محدد انما لتحديد الشكل العام للقسم او الصفحة أو الموقع.</string>
    <string name="abouttext">هذا نص تجريبي لاختبار شكل و حجم النصوص و طريقة عرضهاi في هذا المكان و حجم و لون الخط حيث يتم التحكم في هذا النص وامكانية تغييرة في اي وقت عن طريق ادارة الموقع . يتم اضافة هذا النص كنص تجريبي للمعاينة فقط وهو لا يعبر عن أي موضوع محدد انما لتحديد الشكل العام للقسم او الصفحة أو الموقع.  هذا نص تجريبي لاختبار شكل و حجم النصوص و طريقة عرضهاi في هذا المكان و حجم و لون الخط حيث يتم التحكم في هذا النص وامكانية تغييرة في اي وقت عن طريق ادارة الموقع . يتم اضافة هذا النص كنص تجريبي للمعاينة فقط وهو لا يعبر عن أي موضوع محدد انما لتحديد الشكل العام للقسم او الصفحة أو الموقع.</string>
    <string name="choose_account">التسجيل</string>
    <string name="createaccount">انشاء حساب</string>
    <string name="welcom">اهلا بك في تطبيق LiveCook </string>
    <string name="notidicationdec">هذا نص تجريبي لاختبار شكل و حجم النصوص و طريقة عرضهاi في هذا المكان و حجم و لون الخط حيث يتم التحكم في هذا النص وامكانية تغييرة في اي وقت عن طريق ادارة الموقع . يتم اضافة هذا النص كنص تجريبي للمعاينة فقط وهو لا يعبر عن أي موضوع محدد انما لتحديد الشكل العام للقسم او الصفحة أو الموقع.</string>
    <string name="time_not">منذ ساعة</string>
    <string name="notificaton_title">عنوان الاشعار</string>
    <string name="live_title">عنوان البث</string>
    <string name="namecookres">اسم المطعم او الطباخ</string>
    <string name="cook_name">اسم الطباخ</string>
    <string name="cook_desc">معلومات عن الطباخ معلومات عن الطباخ</string>
    <string name="cook_address">المدينة المنورة - منطقة الراجحي</string>
    <string name="cook">الطباخين</string>
    <string name="resturant">المطاعم</string>
    <string name="restname">اسم المطعم</string>
    <string name="cook_descdetails">هذا نص تجريبي لاختبار شكل و حجم النصوص و طريقة عرضهاi في هذا المكان و حجم و لون الخط حيث يتم التحكم في هذا النص وامكانية تغييرة في اي وقت عن طريق ادارة الموقع . يتم اضافة هذا النص كنص تجريبي للمعاينة فقط وهو لا يعبر عن أي موضوع محدد انما لتحديد الشكل العام للقسم او الصفحة أو الموقع.  هذا نص تجريبي لاختبار شكل و حجم النصوص و طريقة عرضهاi في هذا المكان و حجم و لون الخط حيث يتم التحكم في هذا النص وامكانية تغييرة في اي وقت عن طريق ادارة الموقع . يتم اضافة هذا النص كنص تجريبي للمعاينة فقط وهو لا يعبر عن أي موضوع محدد انما لتحديد الشكل العام للقسم او الصفحة أو الموقع.</string>
    <string name="country_cook">الدولة :السعودية</string>
    <string name="city_cook">المدينة : الرياض</string>
    <string name="city_state">المنطقة : السعودي</string>
    <string name="cook_phone">الهاتف : </string>
    <string name="able_phone_login">لرؤية الهاتف يرجى تسجيل الدخول</string>
    <string name="cookpage">صفحة الطباخ</string>
    <string name="resturantpage">صفحة المطعم</string>
    <string name="login">تسجيل الدخول</string>
    <string name="uploadd">ارفاق صورة المنيو</string>
    <string name="repeatpasswaed">اعادة كتابة كلمة المرور</string>
    <string name="registeraccount">انشاء حساب</string>
    <string name="cooklive">مباشر</string>
    <string name="not_match_passward">كلمتا المرور غير متطابق</string>
    <string name="repeatpasswward">ادخل كلمة المرور مرة اخرى</string>
    <string name="enter_passward">ادخل كلمة المرور</string>
    <string name="enter_mobile">ادخل رقم الجوال</string>
    <string name="enter_name">ادخل الاسم</string>
    <string name="enter_email">ادخل البريد الالكتروني  </string>
    <string name="enter_message">ادخل الرسالة  </string>
    <string name="choose_creat">هل لديك حساب معنا؟ </string>
    <string name="savepassward">حفظ كلمة المرور</string>
    <string name="app_name1"> LiveCook</string>
    <string name="changpasswaed">نسيت كلمة المرور؟</string>
    <string name="changpasswae">تغير كلمة المرور</string>
    <string name="oldpass">كلمة المرور الحالية </string>
    <string name="newpass">كلمة المرور الجديدة</string>
    <string name="newpasscon">تأكيد كلمة المرورالجديدة</string>
    <string name="email">البريد الالكتروني</string>
    <string name="sub">الموضوع</string>
    <string name="failed_text">لا يوجد اتصال بالانترنت حاول مرة  اخرى  </string>
    <string name="failed_title_text">أوبس</string>
    <string name="btn_retry">حاول مرة أخرى</string>
    <string name="title_activity_register_cook_activiity">RegisterCookActiviity</string>
    <string name="cooker_image">صورة الطباخ</string>

    <string name="stop_publishing">انهاء البث</string>
    <string name="started_publishing">تم بدء البث</string>
    <string name="stopped_publishing">تم انهاء البث </string>
    <string name="disconnected_publishing">النشر غير متصل </string>
    <string name="failed_publishing">خطأ بالاتصال </string>

    <string name="error_empty_url">url is empty</string>

    <string name="publishing_label">مباشر  %1$s:%2$s</string>
    <string name="start_publishing">بدء البث</string>
    <string name="resturan_image">صورة المطعم</string>
    <string name="contactwhats">رقم الواتس للتواصل</string>
    <string name="persona">الملف الشخصي</string>
    <string name="live_nam">مباشر 00:00</string>
    <string name="type2">ذبائح</string>
    <string name="type1">مستقل</string>
    <string name="search_">بحث</string>
    <string name="search_rest">بحث عن مطاعم </string>
    <string name="search_cook"> بحث عن طباخين</string>
    <string name="searchres">البحث عن مطاعم</string>
    <string name="livename">ادخل عنوان البث</string>
    <string name="cancle">الغاء</string>
    <string name="menu_rest">قائمة الطعام</string>
    <string name="libeword">مباشر</string>
    <string name="liveword">مباشر</string>
    <string name="livereport">ادخل نص الابلاغ</string>
    <string name="saerch_hint">بحث</string>
    <string name="menu_enter">تسجيل الدخول</string>
    <string name="load">الرجاءالانتظار ... يتم تحميل البيانات </string>
    <string name="load_login">الرجاءالانتظار ... يتم الان التحقق من البيانات  </string>
    <string name="enter_subject">ادخل الموضوع </string>
    <string name="login_user">تسجيل دخول الزبائن  </string>
    <string name="login_cooker">تسجيل دخول الطباخين </string>
    <string name="login_resturanr">تسجيل دخول المطاعم </string>
    <string name="no_result">لا يوجد نتائج</string>
    <string name="not_notofication">لا يوجد اشعارات</string>
    <string name="senddata">يتم الان ارسال البيانات</string>
    <string name="enter__correct_email">صيغة البريد الالكتروني غير صحيحةً</string>
    <string name="press_again_to_exit">اضغط مرة أخرى للخروج</string>
    <string name="filldate">الرجاء اكمال البيانات لتعديل البيانات</string>
    <string name="enter_region">ادخل اسم الحي</string>
    <string name="enter_desc">ادخل الوصف  </string>
    <string name="registeraccountresturant">انشاء حساب مطعم</string>
    <string name="registeraccountcooker">انشاء حساب طباخ</string>
    <string name="registeraccountuser">انشاء حساب زبون</string>
    <string name="loginword">تسجيل الدخول</string>
    <string name="create_acccount">انشاء حساب </string>
    <string name="mostaql">مستقل</string>
    <string name="dabaha">ذبائح</string>
    <string name="abllag">ابلاغ</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="enter_name_lengh">يجب أن يكون الاسم مكون على الاقل من ثلاثة حروف</string>
    <string name="enter_mobile_length">يجب ان يكون رقم الجوال على الاقل مكون من 9 أرقام </string>
    <string name="dsc">الوصف</string>
    <string name="entercity">اختر المدينة</string>
    <string name="enter_country">اختر الدولة</string>
    <string name="menu_video">فيديوهات المنيو</string>

</resources>
