<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ed2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:padding="16dp"
    android:textDirection="rtl">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_marginBottom="-20dp"

        android:src="@drawable/livecookk" />
    <ImageView
        android:layout_width="match_parent"
        android:id="@+id/registercook"
        android:visibility="gone"
        android:layout_marginBottom="-30dp"

        android:layout_height="wrap_content"
        android:src="@drawable/coookerloggoin" />
    <ImageView
        android:layout_width="match_parent"
        android:id="@+id/registerresturant"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-30dp"
        android:visibility="gone"
        android:src="@drawable/resturantlogin" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerclient"
        android:visibility="gone"
        android:src="@drawable/userlogin" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:textDirection="rtl"
        android:layoutDirection="rtl"
        android:layout_gravity="right"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:textDirection="rtl"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title=""
            app:titleTextColor="@color/black" />

        <ImageView
            android:id="@+id/bacck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/toolbar"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:visibility="gone"

            app:srcCompat="@drawable/ic_arrow_back_black" />

    </RelativeLayout>


    <TextView
        android:id="@+id/welcom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcom"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/createacoount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/login_resturanr"
        android:textColor="@color/green"
        android:textSize="16sp"
        android:textStyle="bold" />




    <TextView
        android:id="@+id/tvmobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/mobile_number"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:orientation="horizontal">

        <EditText
            android:id="@+id/edmobile_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:ems="10"
            android:textSize="14sp"
            android:inputType="number"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/countrycode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_title" />



    </LinearLayout>


    <TextView
        android:id="@+id/txpassward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/passwaed"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edpassward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="14sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/choose_creat"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/createnewaccount"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="20dp"
            android:text="@string/createaccount"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/saveLoginCheckBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/createnewaccount"
        android:text="@string/savepassward"
        android:textColor="@color/black" />
    <TextView
        android:id="@+id/changepassward"
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="@string/changpasswae"
        android:textColor="@color/black" />
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>