<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        android:padding="16dp"
        android:textDirection="rtl">


        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:textDirection="rtl"
            android:layoutDirection="rtl"
            android:layout_gravity="right"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textDirection="rtl"
                android:layout_alignParentStart="true"
                android:layout_marginStart="50dp"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/search_cook"
                app:titleTextColor="@color/black" />

            <ImageView
                android:id="@+id/bacck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/toolbar"
                android:layout_alignParentStart="true"
                android:layout_marginTop="16dp"
                android:layout_marginStart="20dp"

                app:srcCompat="@drawable/ic_arrow_back_black" />

        </RelativeLayout>



        <TextView
            android:id="@+id/tvname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cook_name"
            android:textColor="@color/black"
            android:lines="1"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lines="1"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"

            android:textSize="14sp"
            android:textStyle="bold" />





        <TextView
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/countryname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:prompt="@string/spinner_title" />

        <TextView
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cityname"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cityname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
          />


        <EditText
            android:id="@+id/mRegion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="1"
            android:minLines="1"
            android:singleLine="true"
            android:visibility="gone"
            android:hint="@string/state" />





        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="نوع الطباخ"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />
        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_centerVertical="true"

            android:layout_centerHorizontal="true" >

            <RadioButton
                android:id="@+id/cooktype1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/type1" />

            <RadioButton
                android:id="@+id/cooktype2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type2" />


        </RadioGroup>
        <Button
            android:id="@+id/restfilte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/search_" />


        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:id="@+id/cookswip"
            android:visibility="gone"

            android:layout_height="match_parent">
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/cookrecycler"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_height="match_parent" />




        <include
            android:id="@+id/lyt_failed_home"
            layout="@layout/include_failed"
            android:visibility="gone" />
    </LinearLayout>


